--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "arrowParens": "avoid",
-  "printWidth": 100,
-  "quoteProps": "as-needed",
+  "plugins": ["prettier-plugin-tailwindcss"],
   "semi": false,
   "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "none",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "printWidth": 100,
+  "trailingComma": "none"
 }
