--- a/package.json
+++ b/package.json
@@ -1,48 +1,41 @@
 {
-  "name": "decito-linkhub",
-  "version": "0.0.1",
+  "name": "decito",
+  "version": "0.0.2",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
     "@vercel/analytics": "^1.5.0",
     "@vueuse/core": "^13.1.0",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.10.4",
-    "@tsconfig/node18": "^18.2.4",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.15.3",
-    "@typescript-eslint/parser": "^8.14.0",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
+    "@tsconfig/node22": "^22.0.1",
+    "@types/node": "^22.15.12",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "eslint-plugin-vue": "^10.0.0",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
-    "unplugin-auto-import": "^0.18.3",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^6.3.4",
-    "vue-tsc": "^2.1.10"
+    "eslint": "^9.22.0",
+    "eslint-plugin-vue": "^10.1.0",
+    "npm-run-all2": "^8.0.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.5",
+    "typescript": "~5.8.0",
+    "vite": "^6.2.4",
+    "vue-tsc": "^2.2.8"
   }
 }
